Bug 468098 - Function ''Mean'' does not function (in SpreadSheet) with numbers of more 5 figures
Summary: Function ''Mean'' does not function (in SpreadSheet) with numbers of more 5 f...
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-02 21:35 UTC by Guillaume Girard
Modified: 2023-04-25 22:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.10.1
Sentry Crash Report:


Attachments
PrintScreen (106.81 KB, image/png)
2023-04-02 21:35 UTC, Guillaume Girard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guillaume Girard 2023-04-02 21:35:54 UTC
Created attachment 157803 [details]
PrintScreen

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Function ''Mean'' does not function (in SpreadSheet) with numbers of more 5 figures
2. ex. 15000, 14000, 13000
3. 

OBSERVED RESULT
Does not function.

EXPECTED RESULT
Does not function.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Stefan Gerlach 2023-04-16 15:53:56 UTC
The function mean(x) has problems with the group separator (i.e. the space in your example). A workaround is to disable the group separator in the settings.
Comment 2 Stefan Gerlach 2023-04-25 22:14:19 UTC
Git commit 983ed716b2d4a6741e3f25d8f549094e0ebf534e by Stefan Gerlach.
Committed on 25/04/2023 at 22:11.
Pushed by sgerlach into branch 'master'.

Fix group separator problem in formulas

FIXED-IN: 2.10.1

M  +13   -8    src/backend/core/column/ColumnPrivate.cpp
M  +5    -1    src/backend/gsl/ExpressionParser.cpp

https://invent.kde.org/education/labplot/commit/983ed716b2d4a6741e3f25d8f549094e0ebf534e
Comment 3 Stefan Gerlach 2023-04-25 22:15:27 UTC
Git commit c47ff990e51d74c82ba9eef20573367939d95a27 by Stefan Gerlach.
Committed on 25/04/2023 at 22:14.
Pushed by sgerlach into branch 'release/2.10'.

Fix group separator problem in formulas

FIXED-IN: 2.10.1

M  +13   -8    src/backend/core/column/ColumnPrivate.cpp
M  +5    -1    src/backend/gsl/ExpressionParser.cpp

https://invent.kde.org/education/labplot/commit/c47ff990e51d74c82ba9eef20573367939d95a27