Fix group separator problem in formulas

BUG: 468098

FIXED-IN: 2.10.1